--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.8.11",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "njwt": "^1.0.0"
   }
 }
