--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mysql2": "^2.1.0",
     "njwt": "^1.0.0",
     "nodemon": "^2.0.2",
+    "redis": "^3.0.2",
     "sequelize": "^5.21.5"
   }
 }
