--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -14,6 +15,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.8.11",
+    "mongoose-auto-increment": "^5.0.1",
     "morgan": "~1.9.1",
     "mysql2": "^2.1.0",
     "njwt": "^1.0.0",
