--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "mysql2": "^2.1.0",
     "njwt": "^1.0.0",
     "nodemon": "^2.0.2",
+    "promisify": "0.0.3",
     "redis": "^3.0.2",
-    "sequelize": "^5.21.5"
+    "sequelize": "^5.21.5",
+    "util": "^0.12.2"
   }
 }
